        * replication policies now can optionally return a new return
          value of the (new) type MogileFS::ReplicationRequest, which
          has pretty accessor names, can suggest multiple places,
          can indicate non-ideal emergency replication decisions.
          old plugins' return values will be transparently upgraded
          to the equivalent new return value objects.

        * adding new device state: "drain".  it's a hybrid of "dead"
          (in that files are migrated off it) and "readonly", it that
          it still serves traffic... it just doesn't get new files.
          this also introduces the new object-oriented DeviceState class,
          and device_state($name) utility function to get the DeviceState
          singleton by name

        * internal code cleanup.  notably, kill the old & nasty legacy
          'find_deviceid' function which was ridiculously long and hairy.
          the two callers are now more readable with sorts/greps/etc.

        * make mogstored's devN/usage writing process (DiskUsage) be less
          racy with the mogilefsd monitoring code... don't open file for
          write... open read/write, then in one write system call, write
          the entire file, with newline padding at end to cover old data,
          then truncate it if necessary.  should remove harmless (but scary)
          error messages previously reported by the mogilefsd monitor
          about zero-length usage files.

        * new protocol commands to list/set (certain) server settings,
          with value sanity checking (see MogileFS::Config for which
          are settable, and with what values).  needed for "enable_rebalance".
          was partially enabled before for slave settings.  also needed
          for memcached support before, which was never possible to
          set with mogadm, only with db tweaking.

        * make mogilefsd fsck use new mogstored fid_sizes command, to